# subsets

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py  test.py
subsets/: BitSet.hpp  DenseBox.cpp  DenseBox.hpp  DenseTernary.cpp  DenseTernary.hpp  common.hpp  cube_cover.py  hackycpp.hpp  max_cubes.py  misc.py  ternary.hpp  tools.py
tests/: test_CubeCover.py  test_MaxCubes.py  test_QMC1.py
